--- a/main.tex
+++ b/main.tex
@@ -144,418 +144,7 @@ I do want to assemble course notes from this class, but it's unlikely that I wil
 
 \include{mo}
 
-
-
-
-
-
-\chapter{Finite spectra}
-
-
-\section{The context of a spectrum}
-
-The bar complex and $A_\infty$ ring spectra
-
-The descent object for the unit map $\S \to E$:
-
-\[\mathcal{D}_E(X) := \left\{
-\begin{tikzcd}
-\begin{array}{c} E \\ \sm \\ X \end{array} \arrow[leftarrow, shift left=\baselineskip]{r}{\mu} \arrow[shift left=(2*\baselineskip)]{r}{\eta_L} \arrow{r}{\eta_R} &
-\begin{array}{c} E \\ \sm \\ E \\ \sm \\ X \end{array} \arrow[shift left=(3*\baselineskip)]{r} \arrow[leftarrow, shift left=(2*\baselineskip)]{r} \arrow[shift left=\baselineskip]{r}{\Delta} \arrow[leftarrow]{r} \arrow[shift right=\baselineskip]{r} &
-\begin{array}{c} E \\ \sm \\ E \\ \sm \\ E \\ \sm \\ X \end{array} \arrow[shift left=(4*\baselineskip)]{r} \arrow[leftarrow, shift left=(3*\baselineskip)]{r} \arrow[shift left=(2*\baselineskip)]{r} \arrow[leftarrow, shift left=\baselineskip]{r} \arrow{r} \arrow[leftarrow, shift right=\baselineskip]{r} \arrow[shift right=(2*\baselineskip)]{r} &
-\cdots
-\end{tikzcd}
-\right\}.\]
-
-Simplicial schemes and the commutativity hypothesis
-
-\begin{definition}
-$E$ satisfies \CH, the \textbf Commutativity \textbf Hypothesis, when $\pi_* E^{\sm j}$ is commutative for all $j \ge 1$.
-\end{definition}
-
-\begin{definition}
-Suppose that $E$ is a ring spectrum satisfying {\CH}.  We define a simplicial scheme associated to $E$, called its \textit{context}, to be \[\mathcal{M}_E := \left\{
-\begin{tikzcd}
-\Spec \pi_* E \arrow{r} \arrow[leftarrow,shift left=\baselineskip]{r} \arrow[leftarrow,shift right=\baselineskip]{r} & \Spec \pi_* \left( \begin{array}{c} E \\ \sm \\ E \end{array} \right) \arrow[leftarrow, shift left=(2*\baselineskip)]{r} \arrow[shift left=\baselineskip]{r} \arrow[leftarrow]{r} \arrow[shift right=\baselineskip]{r} \arrow[leftarrow, shift right=(2*\baselineskip)]{r} & \Spec \pi_* \left( \begin{array}{c} E \\ \sm \\ E \\ \sm \\ E \end{array} \right) \arrow[leftarrow, shift left=(3*\baselineskip)]{r} \arrow[shift left=(2*\baselineskip)]{r} \arrow[leftarrow, shift left=\baselineskip]{r} \arrow{r} \arrow[leftarrow, shift right=\baselineskip]{r} \arrow[shift right=(2*\baselineskip)]{r} \arrow[leftarrow, shift right=(3*\baselineskip)]{r} & \cdots
-\end{tikzcd}
-\right\}.\]
-\end{definition}
-
-Sheaves on simplicial schemes, cohomology of sheaves
-
-Since $E$--homology is valued in $E_*$--modules, which by \Cref{QCohDefinition} are also known as quasicoherent sheaves over $\Spec E_*$, we are prompted to recall the following definitions:
-\begin{definition}
-%\todo{I'd be much happier not citing the stacks project.}
-Let $X$ be a simplicial object in affine schemes and let $\sheaf F[n]$ be a quasicoherent sheaf on $X[n]$.\footnote{This is a slight abuse of notation: $\sheaf F[n]$ is not the $n$\th level of a simplicial object.}
-\begin{enumerate}
-\item $\sheaf F$ is collectively called a sheaf~\cite[Tag 09VK]{stacks-project} on $X$ when each map $\phi: [m] \to [n]$ inducing a map $X(\phi): X[n] \to X[m]$ naturally induces a sheaf map \[\sheaf F(\phi)_* \co \sheaf F[m] \to X(\phi)_* \sheaf F[n].\]
-\item $\sheaf F$ is called quasicoherent~\cite[Tag 07TF]{stacks-project} when it is comprised levelwise of quasicoherent sheaves.
-\item $\sheaf F$ is called Cartesian quasicoherent~\cite[Tag 07TF]{stacks-project} when it is quasicoherent and the adjoint map \[\sheaf F(\phi)^* \co X(\phi)^* \sheaf F[m] \to \sheaf F[n]\] is an isomorphism.
-\end{enumerate}
-\end{definition}
-
-In our specific example, we construct such a sheaf in the following way:
-
-\begin{definition}\label{DefnHomologyFunctorsValuedInSheaves}
-For a spectrum $E$ as in \Cref{RingSpToStackDefn} and input spectrum $X$, we define the following diagram of abelian groups:
-\[\sheaf{E}(X) := \left\{
-\begin{tikzcd}
-\pi_* \left( \begin{array}{c} E \\ \sm \\ X \end{array} \right) \arrow[leftarrow, shift left=\baselineskip]{r} \arrow[shift left=(2*\baselineskip)]{r} \arrow{r} &
-\pi_* \left( \begin{array}{c} E \\ \sm \\ E \\ \sm \\ X \end{array} \right) \arrow[shift left=(3*\baselineskip)]{r} \arrow[leftarrow, shift left=(2*\baselineskip)]{r} \arrow[shift left=\baselineskip]{r} \arrow[leftarrow]{r} \arrow[shift right=\baselineskip]{r} &
-\pi_* \left( \begin{array}{c} E \\ \sm \\ E \\ \sm \\ E \\ \sm \\ X \end{array} \right) \arrow[shift left=(4*\baselineskip)]{r} \arrow[leftarrow, shift left=(3*\baselineskip)]{r} \arrow[shift left=(2*\baselineskip)]{r} \arrow[leftarrow, shift left=\baselineskip]{r} \arrow{r} \arrow[leftarrow, shift right=\baselineskip]{r} \arrow[shift right=(2*\baselineskip)]{r} &
-\cdots
-\end{tikzcd}
-\right\},\]
-where all of the coface and codegeneracy maps are induced by the unit map $\S \to E$ and the multiplication map $E \sm E \to E$.  (In particular, $X$ is not involved.)  The $j$\th object is a module for $\sheaf{O}(\sheaf M_E[j])$, and hence determines a quasicoherent sheaf over the scheme $(\sheaf M_E[j])$.  Suitably interpreted, the maps of abelian groups determine maps of pushforwards so that $\sheaf{E}(X)$ is a quasicoherent sheaf over the simplicial scheme $\sheaf M_E$.
-\end{definition}
-
-(Basic properties of simplicial schemes: flat and closed maps?)
-
-Groupoid schemes and the flatness hypothesis
-
-\begin{definition}
-Take $E_* E$ to be an $E_*$--module using the left-unit map.  We will say that $E$ satisfies \FH, the \textbf Flatness \textbf Hypothesis, when the right-unit map $E_* \to E_* E$ is a flat map of $E_*$--modules.\todo{Explain {\FH} in terms of a Kunneth spectral sequence.}
-\end{definition}
-
-
-
-
-
-
-\section{Comodule cohomology II: Groupoid cohomology}
-
-Natural equivalence of groupoids induces an equivalence of comodule categories
-
-Deeper natural equivalence: stackification and locality
-
-The $E$-Adams spectral sequence: you owe them this from lecture 1.4
-
-
-
-\section{Quillen's theorem}
-
-\begin{theorem}[Quillen]
-There are isomorphisms
-\begin{align*}
-\Spec MU_* & \to \moduli{fgl}, \\
-\Spec MU_* MU & \to \moduli{fgl} \times \moduli{ps}^{\gpd}, \\
-\context{MU} & \to \left. \left. \moduli{fgl} \middle/\!\!\!\middle/ \left( \moduli{fgl} \times \moduli{ps}^{\gpd} \right) = \moduli{fg} \right. \right. . \qed
-\end{align*}
-\end{theorem}
-
-
-
-\section{Formal varieties}
-
-Formal varieties
-
-Coordinates and parameters, curves
-
-Tangent spaces
-
-The inverse function theorem
-
-Lemma 9.6.4 from the Crystals notes:
-
-\begin{theorem}
-Let $A$ be a Noetherian ring and $G: \CatOf{AdicAlgebras}_A \to \CatOf{AbelianGroups}$ be a functor such that
-\begin{enumerate}
-\item $G(A) = 0$.
-\item $G$ takes surjective maps to surjective maps.
-\item There is a finite, free $A$--module $M$ and a functorial isomorphism \[I \otimes_A M \to G(B) \to G(B')\] whenever $I$ belongs to a square-zero extension of adic $A$--algebras \[I \to B \to B'.\]
-\end{enumerate}
-Then, $G \cong \A^n$ as a functor to sets, where $n = \dim M$.
-\end{theorem}
-
-Definition of a formal group
-
-Formal groups from completions of algebraic groups
-
-Artin-Mazur representability?
-
-
-
-\section{The structure of $\moduli{fg}$ I: Large scales}
-
-Quillen's theorem furnished us with a concrete description of $\context{MU}$ in terms of ``formal groups'', some purely algebraic objects, and we've realized $MU$--homology as being valued in sheaves over $\context{MU}$.  To get as much control on the behavior of $\context{MU}$ as we can, we're now moved to investigate the theory of formal groups.  In particular, many theorems about the behavior of sheaves can be reduced to stalkwise statements, so we will be particularly interested in a classification of the geometric points of $\moduli{fg}$.
-
-Noting that formal group laws arise as analytic germs of multiplication laws on Lie groups, we will first take a cue from Lie theory and attempt to define exponential and logarithm functions for a given formal group law $F$ over a ring $R$.  In Lie theory, this is accomplished by studying left--invariant differentials: a $1$--form $f(x) dx$ is said to be left--invariant under $F$ when \[f(x) dx = f(y +_F x) d(y +_F x) = f(y +_F x) \frac{\partial(y +_F x)}{\partial x} dx.\]  Restricting to the origin by setting $y = 0$, we deduce the condition \[f(0) = f(x) \cdot \left. \frac{\partial(y +_F x)}{\partial x} \right|_{y=0}.\]  If $R$ is a $\Q$--algebra, then setting the boundary condition $f(0) = 1$ and integrating against $x$ yields \[\log_F(x) = \int \left( \left. \frac{\partial(y +_F x)}{\partial x} \right|_{y=0} \right)^{-1} dx.\]  To see that the series $\log_F$ has the claimed homomorphism property, note that \[\frac{\partial \log_F(y +_F x)}{\partial x} = f(y +_F x) d(y +_F x) = f(x) dx = \frac{\partial \log_F(x)}{\partial x},\] so $\log_F(y +_F x)$ and $\log_F(x)$ differ by a constant.  Checking at $x = 0$ shows that the constant is $\log_F(y)$, hence \[\log_F(x +_F y) = \log_F(x) + \log_F(y).\]  We have thus analyzed the rational moduli $\moduli{fg} \times \Spec \Q$:
-\begin{theorem}
-$\moduli{fg} \times \Spec \Q$ is contractible: every formal group law is uniquely isomorphic to $\G_a$. \qed \todo{What about rescaling? Should you be honest and call this $\moduli{fg}^{(1)}$?}
-\end{theorem}
-
-However, if $R$ is not a $\Q$--algebra, then we may not be able to perform power series integration.  Nonetheless, thinking of the $\Q$--algebra restriction as localization at $(0)$, this inspires us to work arithmetically locally at a prime $p$ and consider $\moduli{fg} \times \Spec \Z_{(p)}$.  This task is eased considerably by the following fundamental theorem of Lazard:
-
-\begin{theorem}[Lazard, part 1]
-The ring of functions on $\moduli{fgl}$ is polynomial in infinitely many variables.
-\end{theorem}
-
-\begin{remark}
-His proof does not give a canonical presentation.  Rationally, these are the coordinate functions selecting the logarithm coefficients.
-\end{remark}
-
-\begin{corollary}
-Given a formal group law $\phi$ over a ring $R$ and a surjective ring map $f: S \to R$, there exists a formal group law $\widetilde \phi$ over $S$ with \[\phi = f^* \widetilde \phi. \qed\]
-\end{corollary}
-
-\begin{theorem}[Hazewinkel]
-Every formal group law $F$ over a $\Z_{(p)}$--algebra is isomorphic to some $F'$ whose rational logarithm has the form \[\log_{F'}(x) = \sum_{n=0}^\infty \ell_n x^{p^n}.\]  It follows that the radius of convergence of $\log_{F'}$ must be $p^d$ for some $d$.\footnote{If $F$ is additive, then $d$ can be infinite.}  The integer $d$ is called the \emph{height} of $F'$.  It is an isomorphism invariant and it is insensitive to lifts along surjective maps from torsion--free $\Z_{(p)}$--algebras. \qed
-\end{theorem}
-
-\begin{theorem}[Landweber, part 2: classification of closed substacks]
-Let $BP_*$ be the ring classifying formal group laws with $p$--typical logarithms.
-\begin{enumerate}
-\item It has the form $BP_* \cong \Z_{(p)}[v_1, v_2, \ldots, v_d, \ldots]$, where $v_d \equiv p \ell_d \pmod{\text{decomposables}}$.
-\item The unique closed substack of $\moduli{fg} \times \Spec \Z_{(p)}$ of codimension $d$ is selected by $BP_* / (p, v_1, \ldots, v_{d-1})$, and its complementary open substack of dimension $d$ is selected by either of $v_d^{-1} BP_*$ or $v_d^{-1} \Z_{(p)}[v_1, \ldots, v_d]$.\footnote{It's worth pointing out how strange this is. In Euclidean geometry, open subspaces are always top-dimensional, and closed subspaces can drop dimension.}
-\item A $BP_*$--module $M$ gives a flat sheaf on $\moduli{fg}$ exactly when $(p, v_1, v_2, \ldots, v_{d-1}, \ldots)$ is a regular sequence $M$ too.
-\item In particular, $BP_*$ is itself such a module, and so gives rise to a homology theory $BP$ with $\M_{BP} \simeq \moduli{fg} \times \Spec \Z_{(p)}$. \qed
-\end{enumerate}
-\end{theorem}
-
-
-$p$-typification, the relation between $p$-typical logarithms and the $p$-series
-
-Classification of closed substacks
-
-Classification of closed points
-
-
-
-\section{The structure of $\moduli{fg}$ II: Small scales}
-
-Lubin--Tate deformation theories
-
-The nice picture I drew for Catherine
-
-
-
-Let $F(x, y)$ be a formal group law over $R$; a deformation of $F$ is a formal group law $F_h(x, y)$ over $R[[h]]$ reducing to $F$ when $h = 0$; an isomorphism of deformations is a strict isomorphism covering the identity on $h = 0$.
-
-Define the deformation complex $C^*(F)$ by \[R \to R\llbracket x_1 \rrbracket \to R\llbracket x_1, x_2 \rrbracket \to R\llbracket x_1, x_2, x_3 \rrbracket \to \cdots\] with differential
-\begin{align*}
-(df)(x_1, \ldots, x_{n+1}) & = F_1\left(\sum_{i=1}^n {}^F x_i, x_{n+1} \right) \cdot f(x_1, \ldots, x_n) \\
-& \quad + \sum (-1)^i f(x_1, \ldots, F(x_i, x_{i+1}), \ldots, x_{n+1}) \\
-& \quad (-1)^{n+1} \left( F_2\left(x_1, \sum_{i=2}^{n+1} {}^F x_i \right) \cdot f(x_2, \ldots, x_{n+1}) \right),
-\end{align*}
-where we have written
-\begin{align*}
-F_1(x, y) & = \frac{\partial F(x, y)}{\partial x}, &
-F_2(x, y) & = \frac{\partial F(x, y)}{\partial y}.
-\end{align*}
-This is quasi-isomorphic to the usual bar complex. The usual bar complex receives a map defined by \[f \mapsto \check{f}(x_1, \ldots, x_n) = F_1\left( 0, \sum_{i=1}^n {}F x_i \right)^{-1} f(x_1, \ldots, x_n),\] and this is the quasi-isomorphism. You'll probably want to know the formulas
-\begin{align*}
-F_1(x, y) & = F_1(0, x)^{-1} F_1(0, F(x, y)), \\
-F_2(x, y) & = F_2(y, 0)^{-1} F_2(F(x, y), 0) = F_1(0, y)^{-1} F_1(0, F(x, y)).
-\end{align*}
-
-
-
-\section{The nilpotence theorem}
-
-Every skew field spectrum is a wedge of K(n)s
-
-Definitions of Morava $K$-- and $E$--theory
-
-Yesterday, we developed a rich target for $T(J)$--homology: sheaves over an algebro-geometric object $\M_{T(J)}$.  Furthermore, Quillen's theorem gave an identification $\M_{T(J)} \simeq \moduli{fg}$.  Our initial goal for today is to outline a program by which we can leverage this to study $T(J)$.  Abstractly, one can hope to study any sheaf, including $\M_{T(J)}(X)$, by analyzing its stalks.  The main utility of Quillen's theorem is that it gives us access to a concrete model of $\M_{T(J)}$, so that we can determine where to even look for those stalks.
-
-With this in mind, given a map \[\Spec R \xrightarrow{f} \moduli{fg},\] life would be easiest if the $R$--module determined by $f^* \M_{T(J)}(X)$ were itself the value of a homology theory $R_*(X) = T(J)_* X \otimes_{T(J)_*} R$.  After all, the pullback of some arbitrary sheaf along some arbitrary map has no special behavior, but homology functors do have familiar special behaviors which we could hope to exploit.  Generally, this is unreasonable to expect: homology theories are functors which convert cofiber sequences of spectra to long exact sequences of groups, but base--change from $\moduli{fg}$ to $\Spec R$ preserves exact sequences exactly when $f$ is \textit{flat}.  In that case, this gives the following theorem:
-
-\begin{theorem}[Landweber, part 1]
-For any diagram
-\begin{center}
-\begin{tikzcd}
-\Spec R \arrow{r}{i} & \moduli{fgl} \arrow[-,double]{r} \arrow{d} & \M_{T(J)}[0] \arrow{d} \arrow[-,double]{r} & \Spec T(J)_* \\
-& \moduli{fg} \arrow[-,double]{r} \arrow[leftarrow]{lu}{\mathrm{flat}} & \M_{T(J)}
-\end{tikzcd}
-\end{center}
-such that the diagonal arrow is flat, the functor \[R_*(X) := T(J)_*(X) \otimes_{T(J)_*} R\] determines a homology theory. 
-\end{theorem}
-
-\noindent In the course of proving this theorem, Landweber devised a method to recognize flat maps.  Recall that a map $f$ is flat exactly when for any closed substack $i: A \to \moduli{fg}$ with ideal sheaf $\mathcal I$ there is an exact sequence \[0 \to f^* \mathcal I \to f^* \mathcal O_{\moduli{fg}} \to f^* i_* \mathcal O_A \to 0.\]  Landweber classified the closed substacks of $\moduli{fg}$, thereby giving a method to check maps for flatness.
-
-This appears to be a moot point, however, as it is unreasonable to expect this idea to apply to computing stalks: the inclusion of a closed substack (and so, in particular, a closed point $\Gamma$) is flat only in highly degenerate cases.  This can be repaired: the inclusion of the formal completion of a closed substack of a Noetherian\footnote{$\moduli{fg}$ is not Noetherian, but we will find that each closed point except $\G_a$ lives in an open substack that happens to be Noetherian.} stack is flat, and so we naturally become interested in the infinitesimal deformation spaces of the closed points $\Gamma$ on $\moduli{fg}$.  If we can analyze those, then Landweber's theorem will produce homology theories called $E_\Gamma$.  Moreover, if we find that these deformation spaces are \emph{smooth}, it will follow that their deformation rings support regular sequences.  In this excellent case, by taking the regular quotient we will be able to recover a \emph{homology theory} $K_\Gamma$ which plays the role of computing the stalk of $\M_{T(J)}(X)$ at $\Gamma$.\footnote{Incidentally, this program has no content when applied to $\M_{H\F_2}$, as $\Spec \F_2$ is simply too small.}
-
-----
-
-Having constructed these ``stalk'' homology theories, I want to show that you can actually perform analyses of the kind I was describing at the beginning of today.  Our example case is a famous theorem: the solution of Ravenel's nilpotence conjectures by Devinatz, Hopkins, and Smith.  Their theorem concerns spectra which ``detect nilpotence'' in the following sense:
-
-\begin{definition}
-A ring spectrum $E$ \textit{detects nilpotence} if, for any ring spectrum $R$, the kernel of the Hurewicz homomorphism $E_*: \pi_* R \to E_* R$ consists of nilpotent elements.
-\end{definition}
-
-First, a word about why one would care about such a condition.  The following theorem is classical:
-\begin{theorem}[Nishida]
-Every homotopy class $\alpha \in \pi_{\ge 1} \S$ is nilpotent.
-\end{theorem}
-
-\noindent However, people studying $K$--theory in the '$70$s discovered the following phenomenon:
-
-\begin{theorem}[Adams]
-Let $M_{2n}(p)$ denote the mod--$p$ Moore spectrum with bottom cell in degree $2n$.  Then there is an index $n$ and a map $v: M_{2n}(p) \to M_0(p)$ such that $KU_* v$ acts by multiplication by the $n$\textsuperscript{th}\, power of the Bott class.\footnote{The minimal such $n$ is given by the formula $n = \begin{cases} p-1 & \text{when $p \ge 3$}, \\ 4 & \text{when $p = 2$}. \end{cases}$}
-\end{theorem}
-
-\noindent In particular, this means that $v$ cannot be nilpotent, since a null-homotopic map induces the zero map in any homology theory.  Just as we took the non-nilpotent endomorphism $p$ in $\pi_0 \End \S$ and coned it off, we can take the endomorphism $v$ in $\pi_{2p-2} \End M_0(p)$ and cone it off to form a new spectrum called $V(1)$.\footnote{$V(1)$ actually means a finite spectrum with $BP_* V(1) \cong BP_* / (p, v_1)$. At $p = 2$ this spectrum doesn't exist and this is a misnomer.}  Ravenel's burning question was whether the pattern continues: does $V(1)$ have a non-nilpotent self-map, and can we cone it off to form a new such spectrum with a new such map?  Can we then do that again, indefinitely?  In order to study this question, we are motivated to find spectra $E$ as above --- and in fact, we found one yesterday.
-
-\begin{theorem}[Devinatz--Hopkins--Smith, hard]
-The spectrum $T(J)$ detects nilpotence.
-\end{theorem}
-
-They also show that the $T(J)$ is the universal object which detects nilpotence, in the sense that any other ring spectrum can have this property checked stalkwise on $\M_{T(J)}$:
-
-\begin{theorem}[Hopkins--Smith, easy]
-A ring spectrum $E$ detects nilpotence if and only if $K(d)_* E \ne 0$ for all $0 \le d \le \infty$ and for all primes $p$.
-\end{theorem}
-\begin{proof}
-If $K(d)_* E = 0$ for some $d$, then the non-nilpotent map $\S \to K(d)$ lies in the kernel of the Hurewicz homomorphism for $E$, so $E$ fails to detect nilpotence.
-
-Hence, for any $d$ we must have $K(d)_* E \ne 0$.  Because $K(d)_*$ is a field, it follows by picking a basis of $K(d)_* E$ that $K(d) \sm E$ is a nonempty wedge of suspensions of $K(d)$.  So, for $\alpha \in \pi_* R$, if $E_* \alpha = 0$ then $(K(d) \sm E)_* \alpha = 0$ and hence $K(d)_* \alpha = 0$.  So, we need to show that if $K(d)_* \alpha = 0$ for all $n$ and all $p$ then $\alpha$ is nilpotent.  Taking Devinatz--Hopkins--Smith as given, it would suffice to show merely that $T(J)_* \alpha$ is nilpotent.  This is equivalent to showing that the ring spectrum $T(J) \sm R[\alpha^{-1}]$ is contractible or that the unit map is null: \[\S \to T(J) \sm R[\alpha^{-1}].\]
-
-Pick a prime $p$ and recall the regular sequence of Landweber's theorem.  We define a spectrum $P(d+1)$ to be the regular quotient of $BP$ by $(p, v_1, \ldots, v_d)$.  A nontrivial result of Johnson and Wilson shows that if $T(J)_* X = 0$ for any $X$, then for any $d$ we have $K([0, d])_* X = 0$ and $P(d+1)_* X = 0$.\footnote{It is immediate that $T(J)_* X = 0$ forces $P(d+1)_* X = 0$ and $v_{d'}^{-1} P(d')_*(X) = 0$ for all $d' < d$.  What's nontrivial is showing that $v_{d'}^{-1} P(d')_*(X) = 0$ if and only if $K(d')_*(X) = 0$.}  Taking $X = R[\alpha^{-1}]$, have assumed all of these are zero except for $P(d+1)$.  But $\colim_d P(d+1) \simeq H\F_p \simeq K(\infty)$, and $\S \to K(\infty) \sm R[\alpha^{-1}]$ is assumed to be null as well.  By compactness of $\S$, that null-homotopy factors through some finite stage $P(d+1) \sm R[\alpha]$ with $d \gg 0$.
-\end{proof}
-
-As another example of the primacy of these methods, we can show the following interesting result.  Say that $R$ is a field spectrum when every $R$--module (in the homotopy category) splits as a wedge of suspensions of $R$.  It is easy to check (as mentioned in the proof above) that $K(d)$ is an example of such a spectrum.
-
-\begin{theorem}
-Every field spectrum $R$ splits as a wedge of Morava $K$--theories.
-\end{theorem}
-\begin{proof}
-Set $E = \bigvee_{\text{primes $p$}} \bigvee_{d \in [0, \infty]} K(d)$, so that $E$ detects nilpotence.  The class $1$ in the field spectrum $R$ is non-nilpotent, so it survives when paired with some $K$--theory $K(d)$, and hence $R \sm K(d)$ is not contractible.  Because both $R$ and $K(d)$ are field spectra, the smash product of the two simultaneously decomposes into a wedge of $K(d)$s and a wedge of $R$s.  So, $R$ is a retract of a wedge of $K(d)$s, and picking a basis for its image on homotopy shows that it is a sub-wedge of $K(d)$s.
-\end{proof}
-
-\noindent This is interesting in its own right, because field spectra are exactly those spectra which have K\"unneth isomorphisms.  So, even if you weren't neck-deep in algebraic geometry, you might still have struck across these homology theories just if you like to compute things, since K\"unneth formulas make things computable.
-
-
-
-
-\section{The periodicity theorem}
-
-Classification of the thick subcategories
-
-Balmer's Spc functor
-
-
-Our first goal for today is to apply these local methods once more to get a positive answer to Ravenel's question about finite spectra and periodic self-maps.  The solution to this problem passes through some now-standard machinery for triangulated $\otimes$--categories.
-
-\begin{definition}
-A subcategory of the category of a triangulated category (e.g., $p$--local finite spectra) is \textit{thick} if it is closed under weak equivalences, it is closed under retracts, and it has a $2$-out-of-$3$ property for cofiber sequences.
-\end{definition}
-
-\noindent Examples of thick subcategories include:
-\begin{itemize}
-\item The category $\CatOf{C}_d$ of $p$--local finite spectra which are $K(d-1)$--acyclic.  (For instance, if $d = 1$, the condition of $K(0)$--acyclicity is that the spectrum have purely torsion homotopy groups.)  These are called ``finite spectra of type at least $d$''.
-\item The category $\CatOf{D}_d$ of $p$--local finite spectra $F$ which have a self-map $v: \Susp^N F \to F$, $N \gg 0$, inducing multiplication by a unit in $K(d)$--homology.  These are called ``$v_d$--self--maps''.
-\end{itemize}
-Hopkins and Smith show the following classification theorem:
-
-\begin{theorem}[Hopkins--Smith, easy]
-Any thick subcategory $\CatOf C$ of $p$--local finite spectra must be $\CatOf C_d$ for some $d$.
-\end{theorem}
-\begin{proof}
-It is sufficient to show that any object $X \in \CatOf C$ with $X \in \CatOf C_d$ induces an inclusion $\CatOf C_d \subseteq \CatOf C$.  Let $Y \in \CatOf C_d$ be any other spectrum of type at least $d$.  Consider the endomorphism ring spectrum $R = F(X, X)$ and the fiber $f: F \to \S$ of its unit map.\todo{Make it clear what $f$ is. Draw the fiber sequence or something.}  The action of $f$ under $K(n)$--homology is an isomorphism exactly when $X$ is $K(n)$--acyclic, and because the $K(n)$--acyclicity of $X$ implies the $K(n)$--acyclicity of $Y$, it follows that $1 \sm f: Y \sm F \to Y \sm \S$ is always null on $K(n)$--homology for all $n$.  By a small variant of the local nilpotence detection theorem, it follows that \[Y \sm F^{\sm j} \xrightarrow{1 \sm f^{\sm j}} Y \sm \S^{\sm j}\] is null for $j \gg 0$, and hence that \[\operatorname{cofib}\left( Y \sm F^{\sm j} \xrightarrow{1 \sm f^{\sm j}} Y \sm \S^{\sm j} \right) \simeq Y \sm \operatorname{cofib} f^{\sm j} \simeq Y \vee (Y \sm \Susp F^{\sm j}),\] so that $Y$ is a retract.  However, using $\operatorname{cofib}(f) = X \sm DX \in \CatOf C$ and a smash version of the octahedral axiom
-\begin{align*}
-F \sm F^{\sm (j-1)} & \xrightarrow{f \sm 1} \S \sm F^{\sm (j-1)} \xrightarrow{1 \sm f^{\sm (j-1)}} \S \sm \S^{\sm (j-1)} & \Rightarrow & &  F \sm \operatorname{cofib} f^{\sm (j-1)} \to \operatorname{cofib} f^{\sm j} \to \operatorname{cofib} f \sm \S^{\sm (j-1)}
-\end{align*}
-one can inductively show that $\operatorname{cofib}(f^{\sm j})$, hence $Y \sm \operatorname{cofib}(f^{\sm j})$, and hence $Y$ all belong to $\CatOf C$ as well.
-\end{proof}
-
-They also show the \emph{considerably} harder theorem:
-
-\begin{theorem}[Hopkins--Smith, hard]
-A $p$--local finite spectrum is $K(d-1)$--acyclic exactly when it admits a $v_d$--self--map.
-\end{theorem}
-\begin{proof}[Executive summary of proof]
-Given the classification of thick subcategories, if a property is closed under thickness then one need only exhibit a single spectrum with the property to know that all the spectra in the thick subcategory it generates also all have that property.  Inductively, they manually construct finite spectra $M_0(p^{i_0}, v_1^{i_1}, \ldots, v_{d-1}^{i_{d-1}})$ for sufficiently large\footnote{Compare this asymptotic condition with the assertion yesterday that there is no root of $v: M_8(2) \to M_0(2)$.} indices $i_*$ which admit a self-map $v$ governed by a commuting square
-\begin{center}
-\begin{tikzcd}
-BP_* M_{|v_d| i_d}(p^{i_0}, v_1^{i_1}, \ldots, v_{d-1}^{i_{d-1}}) \arrow{r}{v} \arrow[-,double]{d} & BP_* M_0(p^{i_0}, v_1^{i_1}, \ldots, v_{d-1}^{i_{d-1}}) \arrow[-,double]{d} \\
-\Susp^{|v_d| i_d} BP_* / (p^{i_0}, v_1^{i_1}, \ldots, v_{d-1}^{i_{d-1}}) \arrow{r}{- \cdot v_d^{i_d}} & BP_* / (p^{i_0}, v_1^{i_1}, \ldots, v_{d-1}^{i_{d-1}}).
-\end{tikzcd}
-\end{center}
-These maps are guaranteed by very careful study of Adams spectral sequences.
-\end{proof}
-
-
-\subsection*{Balmer spectra and chromatic localization}
-
-As part of a broad attempt to analyze a geometric object through its modules, Paul Balmer has demonstrated the following theorem:
-
-\begin{definition}
-Given a triangulated $\otimes$--category $\CatOf C$, define a thick subcategory $\CatOf C' \subseteq \CatOf C$ to be a \textit{$\otimes$--ideal} when it has the additional property that $x \in \CatOf C'$ forces $x \otimes y \in \CatOf C'$ for any $y \in \CatOf C$.  Moreover, $\CatOf C'$ is said to be \textit{prime} when $x \otimes y \in \CatOf C'$ forces at least one of $x \in \CatOf C'$ or $y \in \CatOf C'$.  Define the \textit{spectrum} of $\CatOf C$ to be its collection of prime $\otimes$--ideals, topologized so that $U(x) = \{\CatOf C' \mid x \in \CatOf C'\}$ form a basis of opens.
-\end{definition}
-
-\begin{theorem}[Balmer]
-The spectrum of $D^{\perf}(\CatOf{Mod}_R)$ is naturally homeomorphic to the Zariski spectrum of $R$.
-\end{theorem}
-
-Balmer's construction applies much more generally.  The category $\CatOf{Spectra}$ can be identified with $\CatOf{Modules}_{\S}$, and so one can attempt to compute the Balmer spectrum of $\CatOf{Modules}_{\S}^{\perf} = \CatOf{Spectra}^{\mathrm{fin}}$.  In fact, we just finished this.
-\begin{theorem}
-The Balmer spectrum of $\CatOf{Spectra}_{(p)}^{\mathrm{fin}}$ consists of the thick subcategories $\CatOf C_d$, and $\{\CatOf C_n\}_{n=0}^d$ are its open sets.
-\end{theorem}
-\begin{proof}
-Using the characterization of $\CatOf C_d$ as the kernel of $K(d-1)_*$, we see that it is a prime $\otimes$--ideal: \[K(d-1)_*(X \sm Y) \cong K(d-1)_* X \otimes_{K(d-1)_*} K(d-1)_* Y\] is zero exactly when at least one of $X$ and $Y$ is $K(d-1)$--acyclic.
-\end{proof}
-
-In fact, our favorite functor\footnote{However, this functor is \emph{not} a map of triangulated categories, so this has to be interpreted lightly.} $T(J)_*: \CatOf{Spectra} \to \CatOf{QCoh}(\M_{T(J)})$ induces a homeomorphism of the Balmer spectrum of $\CatOf{Spectra}^{\mathrm{fin}}$ to that of $\moduli{fg}$.
-
-
-
-
-\section{Chromatic localizations}
-
-Proof of chromatic fracture
-
-Calculation of $\pi_* L_{K(1)} \S$?
-
-
-However, Balmer's construction gives only a topological space, and not anything like a locally ringed space (or a space otherwise equipped locally with algebraic data).\footnote{We will address this in our situation, but in general this is an open question: given a ring spectrum $R$, how can one recognize these local categories of spectra in terms of $R$, without reference to auxiliary spectra like $T(J)$?  Or, just as importantly: what makes $T(J)$ a special $\S$--algebra?}  Recalling Landweber's theorem from yesterday, Bousfield's theory of homological localization allows us to extend it as follows:
-
-\begin{theorem}[Bousfield]
-Let $R_*$ denote the homology theory associated to a flat map $j: \Spec R \to \moduli{fg}$ by Landweber's theorem.  There is then a diagram\footnote{The meat of this theorem is in overcoming set-theoretic difficulties in the construction of $\CatOf{Spectra}_R$.  Bousfield accomplished this by describing a model structure on $\CatOf{Spectra}$ for which $R$--equivalences create the weak--equivalences.}
-\begin{center}
-\begin{tikzcd}[column sep=2.2cm,row sep=2cm]
-\CatOf{Spectra}_R \arrow[red]{r}{R_* \quad \mathrm{conservative}} \arrow[leftarrow, shift left=0.20cm, red]{d}{L_R} & \CatOf{QCoh}(\Spec R) \arrow[shift left=0.20cm, red, leftarrow]{d}{j^*} \\
-\CatOf{Spectra} \arrow[leftarrow,shift left=0.20cm, "\dashv"']{u}{i} \arrow[red]{ru}{R_*} \arrow[red]{r}{T(J)_*} & \CatOf{QCoh}(\M_{T(J)}), \arrow[leftarrow, shift left=0.20cm, "\dashv"']{u}{j_*}
-\end{tikzcd}
-\end{center}
-such that $i$ is left-adjoint to $L_R$, $j^*$ is left-adjoint to $j_*$, $i$ and $j_*$ are inclusions of full subcategories, the red composites are all equal, and $R_*$ is conservative on $\CatOf{Spectra}_R$.
-\end{theorem}
-
-In the case when $R$ models the inclusion of the deformation space around the point $\Gamma_d$, we will denote the localizer by \[\CatOf{Spectra} \xrightarrow{\widehat L_d} \CatOf{Spectra}_{\Gamma_d}.\]  In the case when $R$ models the inclusion of the open complement of the unique closed substack of codimension $d$, we will denote the localizer by \[\CatOf{Spectra} \xrightarrow{L_d} \CatOf{Spectra}_d = \CatOf{Spectra}_{\moduli{fg}^{\le d}}.\]  We have set up our situation so that the following properties of these localizations either have easy proofs or are intuitive from the algebraic analogue of $j^* \vdash j_*$:
-\begin{enumerate}
-\item There is an equivalence \[L_d X \simeq (L_d \S) \sm X,\] analogous to $j^* M \simeq R \otimes M$ in the algebraic setting.  Because $L_{K(d)}$ is associated to the inclusion of a formal scheme (i.e., an ind-finite scheme), it has the formula \[\widehat L_d X \simeq \lim_I \left( M_0(v^I) \sm L_d X \right)\] analogous to $j^* M \simeq \lim_j (R/I^j \otimes M)$ in the complete algebraic setting.
-\item Because the open substack of dimension $d$ properly contains both the open substack of dimension $(d-1)$ and the infinitesimal deformation neighborhood of the closed point of height $d$, there are natural factorizations
-\begin{align*}
-\operatorname{id} \to L_d \to L_{d-1}, & & \operatorname{id} \to L_d \to \widehat L_d.
-\end{align*}
-In particular, $L_d X = 0$ implies both $L_{d-1} X = 0$ and $\widehat L_d X = 0$.
-\item The inclusion of the open substack of dimension $d-1$ into the one of dimension $d$ has relatively closed complement the point of height $d$.  Algebraically, this gives a gluing square (or Mayer-Vietoris square), and this is reflected in homotopy theory by a homotopy pullback square (the chromatic fracture square):
-\begin{center}
-\begin{tikzcd}
-L_d \arrow{r} \arrow{d} \arrow[dr, phantom, "\lrcorner", very near start] & \widehat L_d \arrow{d} \\
-L_{d-1} \arrow{r} & L_{d-1} \widehat L_d.
-\end{tikzcd}
-\end{center}
-\end{enumerate}
-
-
-\textbf{Chromatic dissembly}
-
-There are also considerably more complicated facts known about these functors:
-\begin{theorem}[Hopkins--Ravenel]
-The homotopy limit of the tower \[\cdots \to L_d F \to L_{d-1} F \to \cdots \to L_1 F \to L_0 F\] recovers the $p$--local homotopy type of any finite spectrum $F$.\footnote{Spectra satisfying this limit property are said to be \textit{chromatically complete}, which is closely related to being \textit{harmonic}, i.e., being local with respect to $\bigvee_{d=0}^\infty K(d)$.  (I believe this a joke about ``music of the spheres''.)  It is known that nice Thom spectra (and in particular every suspension and finite spectrum) is harmonic, that every finite spectrum is chromatically complete, and that there exist some harmonic spectra which are not chromatically complete.}
-\end{theorem}
-
-\noindent This suggests a productive method for analyzing the homotopy groups of spheres: study the homotopy groups of each $L_d \S$ and perform the reassembly process encoded by this inverse limit.  Using the fracture square, one sees that it is also profitable to consider the homotopy groups of $\widehat L_d \S$.  In fact, the spectral version of $\M_E(F)$ considered on the first day furnishes us with a tool by which we can approach this:
-
-\begin{theorem}[Bousfield, et al.]
-The coskeletal filtration of $\mathcal D_E(F)$ gives a spectral sequence converging to the homotopy of its totalization, $F^\wedge_E$.\footnote{There is a subtlety here: the object $\mathcal D_E(F)$ must be able to be formed as a homotopy coherent diagram in order to produce the totalization. Essentially, this forces $E$ to be an $A_\infty$--ring spectrum. This holds for all the examples of ring spectra we have discussed.}  When $F$ is finite and $E$ models either of the cases above, this spectral sequence converges to $\pi_* L_E F$.  Furthermore, there is a line bundle $\omega$ on $\M_E$ such that\footnote{The identification of the $E_2$--page as computing stack cohomology is the first place where we really mean to employ the full technology of stacks in this talk.  Everywhere else, we have been essentially content to speak of simplicial presheaves.} \[E_2^{*, *} = H^*_{\mathrm{stack}}(\M_E; \M_E(F) \otimes \omega^{\otimes *}) \Rightarrow \pi_* L_E F.\]
-\end{theorem}
-
-The utility of this theorem is in the identification with stack cohomology.  In the case $E = E_{\Gamma_d}$, recall that $\M_{E_{\Gamma_d}}[0]$ is a smooth infinitesimal thickening of the spectrum of a field, so that \[\M_{E_{\Gamma_d}} = \left( \moduli{fg} \right)^\wedge_{\Gamma_d} \simeq \widehat{\mathbb A}^{d-1}_{\mathbb W(k)} \mmod \underline{\operatorname{Aut}}(\Gamma_d)\] as in the first example of $E = H\F_2$ on the first day.  But, in this specific case, there is an identification of stack cohomology with group cohomology: \[H^*_{\mathrm{stack}}(* \mmod \underline{G}; \mathcal M) = H^*_{\mathrm{group}}(G; M).\]  Another theorem from the arithmetic geometry literature gives \[\operatorname{Aut}(\Gamma_d) \cong \left( \mathbb{W}(k)\langle S \rangle \middle/ \left( \begin{array}{c} Sw = w^\phi S, \\ S^d = p \end{array} \right) \right)^\times,\] and so we have reduced the computation of all of the stable homotopy groups of spheres to a very difficult problem in profinite group cohomology --- but one which is arithmetically founded, so that arithmetic geometry might continue to lend a hand.
-
-\begin{example}[Adams]
-In the case $d = 1$, $\operatorname{Aut}(\Gamma_1) = \Z_p^\times$ and it acts on $\pi_* E_1 = \Z_p[u^\pm]$ by $\gamma \cdot u^n \mapsto \gamma^n u^n$.  At odd primes $p$ (so that $p$ is coprime to the torsion part of $\Z_p^\times$), one computes \[H^s(\operatorname{Aut}(\Gamma_1); \pi_* E_1) = \begin{cases}\Z_p & \text{when $s = 0$}, \\ \bigoplus_{j = 2(p-1)k} \Z_p\{u^j\} / (pk u^j) & \text{when $s = 1$}, \\ 0 & \text{otherwise}. \end{cases}\]  This, in turn, gives the calculation \[\pi_t \widehat L_1 \S^0 = \begin{cases} \Z_p & \text{when $t = 0$}, \\ \Z_p / (pk) & \text{when $t = t|v_1| - 1$}, \\ 0 & \text{otherwise}. \end{cases}\]  These groups are familiar to homotopy theorists: the $J$--homomorphism $J: BU \to BF$ described on the first day selects exactly these elements (for nonnegative $t$).
-\end{example}
+\include{finite}
 
 
 
