expands lecture 1.2 slightly

--- a/finite.tex
+++ b/finite.tex
@@ -1,6 +1,8 @@
 
 \chapter{Finite spectra}
 
+still need to talk about closed and open subschemes, their basic properties
+
 
 \section{The context of a spectrum}
 
@@ -79,6 +81,7 @@ Natural equivalence of groupoids induces an equivalence of comodule categories
 Deeper natural equivalence: stackification and locality
 
 The $E$-Adams spectral sequence: you owe them this from lecture 1.4
+
 
 
 
