--- a/main.tex
+++ b/main.tex
@@ -178,17 +178,23 @@ The de Rham crystal of a formal group
 
 The practical approach: projective generators of finite Hopf algebras
 
+\section{Coalgebraic formal schemes}
+
 
 
 
 
 \chapter{The $\sigma$-orientation}
 
-\section{Schemes for finite $K$--theory spaces}
+\section{Divisors and divisor schemes}
 
 Divisors and schemes of divisors on $1$-dimensional formal groups
 
+\section{Schemes for finite $K$--theory spaces}
+
 $BU(n)_E$, $BU_E$, and $(BU \times \Z)_E$
+
+$BSU_E$ and special divisors
 
 
 
