decided to skip lecture 1.5 until much later in the semester. branched off sigma.tex, tucked what i’d written in there.

--- a/main.tex
+++ b/main.tex
@@ -184,17 +184,7 @@ The practical approach: projective generators of finite Hopf algebras
 
 
 
-\chapter{The $\sigma$-orientation}
-
-\section{Divisors and divisor schemes}
-
-Divisors and schemes of divisors on $1$-dimensional formal groups
-
-\section{Schemes for finite $K$--theory spaces}
-
-$BU(n)_E$, $BU_E$, and $(BU \times \Z)_E$
-
-$BSU_E$ and special divisors
+\include{sigma}
 
 
 
@@ -222,7 +212,7 @@ Akhil Mathew has notes from an algebraic geometry class ( https://math.berkeley.
 
 Equivalences of various sorts of cohomologies: Ext in modules and quasicoherent cohomology (goodness. Hartshorne, I suppose); Ext in comodules and quasicoherent cohomology on stacks (COCTALOS Lemma 12.4); quasicoherent cohomology on simplicial schemes (Stacks project 09VK).
 
-using the splitting principle to describe $\Div^+_n \CP^\infty_E = BU(n)_E$, and in particular that projectivization theorem. This is in the proof of 16.2 in Switzer, though he doesn't state it as one of the consequences in the theorem text itself. The main point is that the fiber map $\CP^{n-1} \to P(V) \to X$ postcomposes by $P(V) \to \CP^\infty$ to the skeletal inclusion, so the Serre spectral sequence degenerates since its fiber is unmolested (or: the Leray--Hirsch theorem). The Chern classes are \emph{defined} by the one remaining multiplicative extension.
+using the splitting principle to describe $\Div^+_n \CP^\infty_E = BU(n)_E$, and in particular that projectivization theorem. This is in the proof of 16.2 in Switzer, though he doesn't state it as one of the consequences in the theorem text itself.
 
 character sheaves, $\moduli{fg}$ versus $\moduli{fg}^{(1)}$, graded versus ungraded things. this is explored in some detail around Remark 3.14 and formula (3.4) in Paul's notes on $\CatOf{QCoh}(\moduli{fg})$.
 
@@ -306,6 +296,8 @@ Mike says that in unpublished AHS work they got at $MString^E$ using an equivale
 + Classification of field spectra
 
 
+
+\section*{Feb 8}
 
 \section*{Feb 10}
 
