i think i am going to follow quillen’s “elementary” proof. it will take its own chapter, and it will require developing a few things a little earlier. this rearranges some things toward that.

--- a/main.tex
+++ b/main.tex
@@ -144,6 +144,8 @@ I do want to assemble course notes from this class, but it's unlikely that I wil
 
 \include{mo}
 
+\include{quillen}
+
 \include{finite}
 
 
