small addition to chapter 2

--- a/finite.tex
+++ b/finite.tex
@@ -163,6 +163,10 @@ F_2(x, y) & = F_2(y, 0)^{-1} F_2(F(x, y), 0) = F_1(0, y)^{-1} F_1(0, F(x, y)).
 \end{align*}
 
 
+Talk about this $B\G$ thing as a simplicial scheme. That's what it is.
+
+
+
 
 \section{The nilpotence theorem}
 
@@ -208,7 +212,7 @@ Every homotopy class $\alpha \in \pi_{\ge 1} \S$ is nilpotent.
 Let $M_{2n}(p)$ denote the mod--$p$ Moore spectrum with bottom cell in degree $2n$.  Then there is an index $n$ and a map $v: M_{2n}(p) \to M_0(p)$ such that $KU_* v$ acts by multiplication by the $n$\textsuperscript{th}\, power of the Bott class.\footnote{The minimal such $n$ is given by the formula $n = \begin{cases} p-1 & \text{when $p \ge 3$}, \\ 4 & \text{when $p = 2$}. \end{cases}$}
 \end{theorem}
 
-\noindent In particular, this means that $v$ cannot be nilpotent, since a null-homotopic map induces the zero map in any homology theory.  Just as we took the non-nilpotent endomorphism $p$ in $\pi_0 \End \S$ and coned it off, we can take the endomorphism $v$ in $\pi_{2p-2} \End M_0(p)$ and cone it off to form a new spectrum called $V(1)$.\footnote{$V(1)$ actually means a finite spectrum with $BP_* V(1) \cong BP_* / (p, v_1)$. At $p = 2$ this spectrum doesn't exist and this is a misnomer.}  Ravenel's burning question was whether the pattern continues: does $V(1)$ have a non-nilpotent self-map, and can we cone it off to form a new such spectrum with a new such map?  Can we then do that again, indefinitely?  In order to study this question, we are motivated to find spectra $E$ as above --- and in fact, we found one yesterday.
+\noindent In particular, this means that $v$ cannot be nilpotent, since a null-homotopic map induces the zero map in any homology theory.  Just as we took the non-nilpotent endomorphism $p$ in $\pi_0 \End \S$ and coned it off, we can take the endomorphism $v$ in $\pi_{2p-2} \End M_0(p)$ and cone it off to form a new spectrum called $V(1)$.\footnote{$V(1)$ actually means a finite spectrum with $BP_* V(1) \cong BP_* / (p, v_1)$. At $p = 2$ this spectrum doesn't exist and this is a misnomer.}\todo{Lee Nave shows that $V((p+1)/1)$ doesn't exist. That's nice.}  Ravenel's burning question was whether the pattern continues: does $V(1)$ have a non-nilpotent self-map, and can we cone it off to form a new such spectrum with a new such map?  Can we then do that again, indefinitely?  In order to study this question, we are motivated to find spectra $E$ as above --- and in fact, we found one yesterday.
 
 \begin{theorem}[Devinatz--Hopkins--Smith, hard]
 The spectrum $T(J)$ detects nilpotence.
