--- a/quillen.tex
+++ b/quillen.tex
@@ -5,6 +5,13 @@
 
 \section{Formal varieties}
 
+Having totally dissected unoriented bordism, we can now turn our attention to other sorts of bordism theories, and there are many available: oriented, $\Spin$, $\String$, complex, \ldots.  We would like to replicate the results above for these other contexts, but we quickly see that only one of the listed bordism theories supports this program.  The space $\RP^\infty = BO(1)$ was a key player in the unoriented bordism story, and the only other bordism theory with a similar ground object is complex bordism, with $\CP^\infty = BU(1)$.  So, we will focus on it.
+
+The content of the first lecture can be replicated essentially \textit{mutatis mutandis}, resulting in the omnibus theorem
+\begin{theorem}
+There is a complex $J$--homomorphism \[J_{\C}: BU \to B \GL_1 \S.\]  It has a Thom spectrum $MU$, for a complex vector bundle $\xi$ on a space $X$ and a ring spectrum $E$ under $MU$, there is a natural equivalence \[E \sm T(\xi) \simeq E \sm \Susp^\infty_+ X.\]  In particular, it follows that $E^* \CP^\infty$ is isomorphic to a one--dimensional power series ring. \qed
+\end{theorem}
+
 Motivation: $MU$ and $\CP^\infty_E$ for an $MU$--oriented theory $E$
 
 Formal varieties
