miscellaneous notes about thom isomorphisms

--- a/quillen.tex
+++ b/quillen.tex
@@ -82,7 +82,33 @@ $\CP^\infty_{H\Z P} \cong \G_a$.  $\CP^\infty_{KU} \cong \G_m$.
 
 
 
+
+
+
 \section{The splitting principle}
+
+the splitting principle: gives Chern classes generally from knowing the calculation for $\CP^\infty$
+
+the cohomology rings $E^* BU(n)$: also gives Chern classes generally, plus there's the divisor scheme structure
+
+% divisors and line bundles on $1$--dimensional objects?
+
+poincare duality for manifolds with oriented tangent bundle
+
+wrong-way maps: $\zeta^* \zeta_* 1$ gives the Euler class of the bundle
+
+Explicit Thom isomorphism map for universal cohomology: $\xi: X \to BU(n)$ Thomifies to $T(\xi) \to MU(n) \to MU$, representing a class $g \in MU^* T(\xi)$, and this gives a map
+\begin{align*}
+MU^*(X) & \to MU^* T(\xi) & \cong MU^*(E, E_0)\\
+x & \mapsto & g \smile p^*(x),
+\end{align*}
+where $p: E \to X$ is the projection and $E_0$ is the image of the zero section.
+
+The first part of Adams's blue book is about the Landweber--Novikov operations.  In particular, he talks about the choice of funny total Chern class, saying that duals to monomials in $H_* BU$ are what span the cohomology of $H^* BU$ and that those are what interact well with the Whitney sum.
+
+The wrong--way maps come from conjugating by Poincar\'e duality: \[E^* X \cong E_{d_X-*} X \to E_{d_X-*} Y \cong E^*{*-d_X+d_Y} Y.\]  Poincar\'e duality comes from asserting that the stable normal bundle is oriented for the theory, and then Atiyah duality says \[D(X_+) \simeq \Susp^{-n} T(\nu) [\simeq T(\nu - n\eps) \simeq T(-\tau)]. \]
+
+---
 
 Here's some old stuff from when I thought it was good to prove the splitting principle for real bundles in the first case study.  This \emph{may} all be needed earlier than this, when we go through a proof of Quillen's theorem on $MU$.  Maybe I'll defer it then too.
 
